--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -52,7 +52,7 @@ Cardio-Fit: Prediction
 
             <p id="ele"><span id="key">{{ wtf.form_field(form.name, placeholder='Full Name, for eg: Carl Johnson') }} </span></p>
 
-            <p id="ele"><span id="key">{{ wtf.form_field(form.age, placeholder='Any age', min="1" max = "99") }} </span> </p>
+            <p id="ele"><span id="key">{{ wtf.form_field(form.age,min="1" max ="110" placeholder='Any age') }} </span> </p>
 
             <p id="ele"><span id="key">{{ wtf.form_field(form.sex) }} </span></p>
 
