--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -8,7 +8,6 @@ Cardio-Fit: Prediction
 <head>
     {% block styles %}
     {{super()}}
-    background-image: url({{ url_for('static', filename='bg1.png') }})
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='./styles/style.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for ('static', filename='./styles/prediction.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.png') }}">
@@ -24,6 +23,7 @@ Cardio-Fit: Prediction
 {% block content %}
 
 <body>
+    <img src ="{{ url_for('static',filename='bg1.png')}}">
     <nav>
         <a class="menu titl non" href="/"><b>CARDIO-FIT</b></a>
         <a class="menu act" href="./predict">Prediction</a>
