--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -11,8 +11,12 @@ Cardio-Fit: Prediction
     <style>
          body
             {
-             background-image: url({{url_for('static', filename='bg1.png') }})
+              background-repeat:no-repeat;
+              background-attachment:fixed;
+              background-size:cover;
+              background-image: url({{url_for('static', filename='bg1.png') }})
             }
+    </style>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='./styles/style.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for ('static', filename='./styles/prediction.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.png') }}">
