--- a/templates/about.html
+++ b/templates/about.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+     <style>
+         body
+            {
+              background-repeat:no-repeat;
+              background-attachment:fixed;
+              background-size: 100% 100%;
+              background-image: url({{url_for('static', filename='bg11.png') }})
+            }
+    </style>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='./styles/style.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='./styles/about.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.png') }}">
